--- a/TestSite/Views/Shared/_Layout.cshtml
+++ b/TestSite/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
 							</div>
 						</div>
 					</div>
+					@await Html.PartialAsync("SideBarPartial")
 				</div>
 			@await Html.PartialAsync("FooterPartial")
 		</div>
