Setup db, migration

--- a/TestSite/Views/Shared/MetatagsPartial.cshtml
+++ b/TestSite/Views/Shared/MetatagsPartial.cshtml
@@ -1,4 +1,6 @@
-﻿<title>Two Column 2 - Minimaxing by HTML5 UP</title>
+﻿@using TestSite.Service
+
+<title>Two Column 2 - Minimaxing by HTML5 UP</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 @if (ViewBag.Title != null)
@@ -7,7 +9,7 @@
 }
 else
 {
-    <title>My Company</title>
+    <title>@Config.CompanyName</title>
 }
 @if (ViewBag.Description != null)
 {
